Versão 0.1.1 - Segundo commit. Apenas uma alteração no arquivo 'livro-servidor-clientes/clientes/livros-react/src/App.css' onde alterei o valor do atributo 'align-items' da classe CSS 'content-container' de 'center' para 'top'; e uma alteração no arquivo 'livro-servidor-clientes/clientes/livros-react/src/LivroLista.js' em que eu inseri o atributo 'style={{width: 100%}}' na tag de abertura do elemento JSX <main> retornado pela função 'LivroLista'. Essas alterações fazem com que, mesmo quando todos os livros da lista que é mostrada no endereço 'http://localhost:3000/' são excluídos, o conteúdo do elemento <main> (em especial, o cabeçalho da tabela que contem os livros) continue a ocupar toda a largura do elemento <body> (que corresponde a toda largura da janela view principal) no qual está contido, e que o elemento <div className='content-container'> retornado pela função 'App' definida no arquivo 'livro-servidor-clientes/clientes/livros-react/src/App.tsx' continue alinhado ao topo de sua posição relativa, logo abaixo do elemento <nav>.

--- a/clientes/livros-react/src/App.css
+++ b/clientes/livros-react/src/App.css
@@ -15,7 +15,7 @@
 
 .content-container {
   display: flex;
-  align-items: center;
+  align-items: top;
   justify-content: center;
   min-height: calc(100vh - 56px); /* Ocupa a altura total da página menos a altura da navbar */
   padding: 20px 50px 20px 50px;
